--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -101,9 +101,9 @@ input {
    
   /*----------------show sidebar button----------------*/
   #show-sidebar {
-    position: fixed;
+    position: relative;
     left: 0;
-    top: 80px;
+    top: 20px;
     border-radius: 0 4px 4px 0px;
     width: 70px;
     transition-delay: 0.3s;
@@ -117,13 +117,14 @@ input {
   
   .sidebar-wrapper {
     width: 170px;
-    margin-top: 71px;
+      
     height: 100%;
     max-height: 100%;
-    position: fixed;
+    position: absolute;
+    
     top: 0;
     left: -300px;
-    z-index: 999;
+    
   }
   
   .sidebar-wrapper ul {
@@ -394,4 +395,8 @@ input {
   padding-left: 90px;
 } 
 
+}
+
+.master-wrapper {
+  position: relative;
 }
